# mixmod

./: .clang-format  .gitignore  CITATION.bib  CMakeLists.txt  README.md  build.sh  build_rmixmod.sh
Pymixmod/: README.rst  cbuilder.pxi  cppmixmod.h  dump_enum.py  gmixmod.pxi  mixmod.pyx  models.pxi  parameter.pxi  plotutil.pxi  pyproject.toml  requirements.txt  setup.py  test_mixmod.py  util.pxi
Pymixmod/conda-recipes/: README.rst  anaconda_settings.sh.tpl  build_pymixmod.sh  reinstall.sh  run_all_examples.sh
Pymixmod/conda-recipes/pymixmod/: build.sh  meta.yaml
Pymixmod/data/: birds.info  birds_other.train  car.info  heterodata.csv  heterodata.train  iris.test  iris.train
Pymixmod/doc/IPynb/: PyMixmodComposite.ipynb  PyMixmodGauss.ipynb  PyMixmodLearn.ipynb  PyMixmodMulti.ipynb  PyMixmodMulti2.ipynb  PyMixmodPredict.ipynb  PyMixmod_quickstart.ipynb  PyMixmod_quickstart_EN.ipynb
Pymixmod/doc/api/: Makefile  make.bat
Pymixmod/examples/: README  ex_composite.py  ex_learn_qn.py  ex_pred_qn.py  exfiles.py
Pymixmod/examples/clustering/: clustering_1.py  clustering_10.py  clustering_11.py  clustering_12.py  clustering_13.py  clustering_2.py  clustering_3.py  clustering_4.py  clustering_5.py  clustering_6.py  clustering_7.py  clustering_8.py  clustering_9.py
Pymixmod/examples/discriminant_analysis/: discriminant_analysis_1.py  discriminant_analysis_2.py  discriminant_analysis_4.py  discriminant_analysis_5.py
Pymixmod/examples/persistence/: persist_inputs.py  persist_results.py  persist_strategy.py
Pymixmod/examples/plotting/: ex_gauss.py  ex_multi.py  ex_qual_plot.py
Pymixmod/mixmod/: cbuilder.pxi  conversion.pxi  cppmixmod.h  cppmixmod.pxd  dump_enum.py  mixmod.pyx  models.pxi  parameter.pxi  plotutil.pxi  strategy.pxi  util.pxi
Pymixmod/test/: test_mixmod.py
mixmodCLI/: CMakeLists.txt
mixmodCLI/EXAMPLES/clustering/: example.R  example.sh  iris.mixmod  irisdat.mxd
mixmodCLI/EXAMPLES/data/: iris.part  iris.test
mixmodCLI/EXAMPLES/learn/: example.R  example.sh  iris.mixmod  irispart.mxl
mixmodCLI/EXAMPLES/predict/: example.R  example.sh  iristest.mxd  param.mxp  param.txt  pred.mixmod
mixmodCLI/SRC/: Readme.txt  mixmodCli.cpp
mixmodGUI/: CMakeLists.txt  ReadMe.txt  license.txt
mixmodGUI/Docker/: Dockerfile  Makefile  howto.txt
mixmodGUI/MAKE/LINUX/: Install.txt  cp_cmake.sh
mixmodGUI/MAKE/MACOSX/: Install.txt
mixmodGUI/MAKE/WINDOWS/: Install.txt  cp_cmake.bat
mixmodGUI/SRC/: CMakeLists.txt  GUIMAboutUs.cpp  GUIMAboutUs.h  GUIMAbstractModifier.cpp  GUIMAbstractModifier.h  GUIMAction.h  GUIMAlgoModifier.cpp  GUIMAlgoModifier.h  GUIMAlgoNameModifier.cpp  GUIMAlgoNameModifier.h  GUIMChoiceColumnConverter.cpp  GUIMChoiceColumnConverter.h  GUIMConverter.cpp  GUIMConverter.h  GUIMCriteriaModifier.cpp  GUIMCriteriaModifier.h  GUIMCriterionChildModifier.cpp  GUIMCriterionChildModifier.h  GUIMDataCreator.cpp  GUIMDataCreator.h  GUIMFilenameValidator.cpp  GUIMFilenameValidator.h  GUIMGraphic.cpp  GUIMGraphic.h  GUIMGraphic2DQuantitative.cpp  GUIMGraphic2DQuantitative.h  GUIMGraphicDockWidget.cpp  GUIMGraphicDockWidget.h  GUIMGraphicManager.cpp  GUIMGraphicManager.h  GUIMGraphicQualitativeDiagram.cpp  GUIMGraphicQualitativeDiagram.h  GUIMGraphicQuantitativeClass.cpp  GUIMGraphicQuantitativeClass.h  GUIMGraphicQuantitativeHist.cpp  GUIMGraphicQuantitativeHist.h  GUIMGraphicQuantitativePoint.cpp  GUIMGraphicQuantitativePoint.h  GUIMInitModifier.cpp  GUIMInitModifier.h  (+44 more)
mixmodGUI/SRC/IMAGES/: iconMixmod.rc  images.qrc
mixmodGUI/SRC/languages/: languages.qrc  mixmod_de.ts  mixmod_en.qm  mixmod_en.ts  mixmod_fr.qm  mixmod_fr.ts
mixmodGUI/mxd/: geyser_input.mixmod  mixmod_geyser.mxd  mixmod_iris.mxd  mixmod_oiseaux.mxd
mixmodIOStream/: CMakeLists.txt  ReadMe.txt  license.txt
mixmodIOStream/MAKE/LINUX/: Install.txt  ReadMe  cp_cmake.sh
mixmodIOStream/MAKE/MACOSX/: cp_cmake.sh
mixmodIOStream/MAKE/WINDOWS/: cp_cmake.sh
mixmodIOStream/MXD/: geyser_input.mixmod  mixmod_geyser.mxd  mixmod_iris.mxd  mixmod_oiseaux.mxd
mixmodIOStream/SRC/: CMakeLists.txt
mixmodIOStream/SRC/mixmod_iostream/: DomData.cpp  DomLabel.cpp  DomProba.cpp  IOStreamUtil.cpp  IOStreamUtil.h  NodeOpInput.cpp  NodeOpOutput.cpp
mixmodLib/: CMakeLists.txt  CPackLists.txt  LICENSE  NEWS  README
mixmodLib/EXAMPLES/: CMakeLists.txt  README  main.cpp
mixmodLib/EXAMPLES/clustering/: clustering_1.cpp  clustering_10.cpp  clustering_11.cpp  clustering_12.cpp  clustering_13.cpp  clustering_14.cpp  clustering_2.cpp  clustering_3.cpp  clustering_4.cpp  clustering_5.cpp  clustering_6.cpp  clustering_7.cpp  clustering_8.cpp  clustering_9.cpp
mixmodLib/EXAMPLES/data/: heterodata.test  iris.train
mixmodLib/EXAMPLES/discriminant_analysis/: discriminant_analysis_1.cpp  discriminant_analysis_2.cpp  discriminant_analysis_3.cpp  discriminant_analysis_4.cpp  discriminant_analysis_5.cpp
mixmodLib/SRC/: CMakeLists.txt
mixmodMVC/: CMakeLists.txt  ReadMe.txt  license.txt
mixmodMVC/SRC/: CMakeLists.txt
mixmodMVC/SRC/mixmod_mvc/: Controller.cpp  Controller.h  Event.cpp  Event.h  EventMixmodDisplay.cpp  EventMixmodDisplay.h  EventMixmodDisplayCenter.cpp  EventMixmodDisplayCenter.h  EventMixmodDisplayDispersion.cpp  EventMixmodDisplayDispersion.h  EventMixmodDisplayDispersionData.cpp  EventMixmodDisplayDispersionData.h  EventMixmodDisplayEpsilon.cpp  EventMixmodDisplayEpsilon.h  EventMixmodDisplayEpsilonInit.cpp  EventMixmodDisplayEpsilonInit.h  EventMixmodDisplayInitParam.cpp  EventMixmodDisplayInitParam.h  EventMixmodDisplayInitPart.cpp  EventMixmodDisplayInitPart.h  EventMixmodDisplayInsertedAlgoName.cpp  EventMixmodDisplayInsertedAlgoName.h  EventMixmodDisplayIteration.cpp  EventMixmodDisplayIteration.h  EventMixmodDisplayKnownPartition.cpp  EventMixmodDisplayKnownPartition.h  EventMixmodDisplayKnownPartitionSample.cpp  EventMixmodDisplayKnownPartitionSample.h  EventMixmodDisplayNbIterationInit.cpp  EventMixmodDisplayNbIterationInit.h  EventMixmodDisplayNbStrategyTry.cpp  EventMixmodDisplayNbStrategyTry.h  EventMixmodDisplayNbTryInit.cpp  EventMixmodDisplayNbTryInit.h  (+200 more)
(+129 files in other folders)
